--- a/Frog.Server/Frog.Server.csproj
+++ b/Frog.Server/Frog.Server.csproj
@@ -1,23 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk">
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <OutputType>Exe</OutputType>
+        <Nullable>enable</Nullable>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <LangVersion>latest</LangVersion>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <PlatformTarget>x64</PlatformTarget>
+    </PropertyGroup>
 
-  <PropertyGroup>
-    <!-- Cible .NET 8 (console) -->
-    <TargetFramework>net8.0</TargetFramework>
+    <ItemGroup>
+        <ProjectReference Include="..\Frog.Core\Frog.Core.csproj" />
+    </ItemGroup>
 
-    <!-- Qualité -->
-    <Nullable>enable</Nullable>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <LangVersion>latest</LangVersion>
+    <ItemGroup>
+        <None Include="appsettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
 
-    <!-- Plateforme (optionnel) -->
-    <PlatformTarget>x64</PlatformTarget>
-
-    <!-- ImplicitUsings active les using courants automatiquement -->
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Frog.Core\Frog.Core.csproj" />
-  </ItemGroup>
-
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    </ItemGroup>
 </Project>
