--- a/.editorconfig
+++ b/.editorconfig
@@ -10,9 +10,11 @@ trim_trailing_whitespace = true
 
 [*.cs]
 # Utiliser 'var' quand c'est évident
-csharp_style_var_for_built_in_types = true:suggestion
-csharp_style_var_when_type_is_apparent = true:suggestion
-csharp_style_var_elsewhere = false:suggestion
+csharp_style_var_for_built_in_types = true:warning
+csharp_style_var_when_type_is_apparent = true:warning
+csharp_style_var_elsewhere = true:warning
+dotnet_diagnostic.CA1848.severity = none
+
 
 # Accolades et using
 csharp_new_line_before_open_brace = all
@@ -20,4 +22,4 @@ dotnet_sort_system_directives_first = true
 dotnet_separate_import_directive_groups = true
 
 # 'nullable' activé par défaut (double sécurité)
-dotnet_analyzer_diagnostic.severity = warning
+dotnet_analyzer_diagnostic.severity = none
